# gimages-scraper

./: .gitignore  README.md  pyproject.toml
src/gimages_scraper/: __init__.py  cli.py  gimages.py  image.py
tests/: test.py
