[build-system]
requires = ["hatchling", "selenium", "argparse"]
build-backend = "hatchling.build"

[project]
name = "gimages_scraper"
version = "0.0.1"
authors = [
    { name="MattTheCoder-W" },
]
description = "Scraping package for Google Images search engine based on selenium."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MattTheCoder-W/gimages-scraper"
"Bug Tracker" = "https://github.com/MattTheCoder-W/gimages-scraper/issues"
